data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_250.wast
;; 1. **Test Description**: Construct a loop where `nop` is placed at the beginning, followed by a `br_if` instruction with a conditional that should break the loop on the first iteration.    - **Constraint**: Validates if the `nop` instruction is correctly not influencing the evaluation of the `br_if` condition.    - **Relation to Infinite Loops**: Ensures that the loop does not infinitely repeat if `nop` misbehaves and affects the branching condition.

(assert_invalid
  (module
    (func $test_loop (loop (nop) (br_if 0 (i32.const 1))))
  )
  "type mismatch"
)